tests/data/pl0/valid/feature_odd_condition.pl0
var x;
begin
  x := 3;
  if odd x then ! 1
end.
