tests/data/pl0/invalid/error_multiple_errors_recovery.pl0
begin
  y := ;
  if then ;
  !
end.
